# llama2.c

./: .gitignore  CMakeLists.txt  Makefile  run.c  run.def  run.h
